--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@
 
 html {
   overflow-y: scroll;
+  touch-action: manipulation;
 }
 
 body {
@@ -40,6 +41,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: 15px;
   line-height: 1.5;
+  touch-action: manipulation;
 }
 
 /* Smooth scrollbar */
